# C-programming

./: BubbleSort.c  CMakeLists.txt  README.md  diamon_pattern.c  hello_n_numberOf_times.c  large_number.c  leap_year.c  odd_or_even.c  palindrome.c  positive_or_negetive.c  prime_number.c  problem_1.c  problem_10.c  problem_11.c  problem_12.c  problem_13.c  problem_14.c  problem_15.c  problem_16.c  problem_17.c  problem_18.c  problem_2.c  problem_3.c  problem_4.c  problem_5.c  problem_6.c  problem_7.c  problem_8.c  problem_9.c  simple_and_compund_interest.c
.github/workflows/: codeql.yml
Lab/: problem_2.c
