cmake_minimum_required(VERSION 3.26)
project(C_programming C)

set(CMAKE_C_STANDARD 11)

add_executable(C_programming
        problem_1.c
        problem_10.c
        problem_11.c
        problem_12.c
        problem_13.c
        problem_14.c
        problem_15.c
        problem_16.c
        problem_17.c
        problem_2.c
        problem_3.c
        problem_4.c
        problem_5.c
        problem_6.c
        problem_7.c
        problem_8.c
        problem_9.c
        problem_18.c
        prime_number.c
        simple_and_compund_interest.c
        leap_year.c
        positive_or_negetive.c
        large_number.c)
